# ms_fluxnet_ch4_n2o_timelag

./: .gitattributes  .gitignore  01_tlag_detection_pwb.R  CLAUDE.md  README.md  info_tlag_results.md  ms_fluxnet_ch4_n2o_timelag.R  pyproject.toml
comparison_python_plot/: plot.py  plot_comparison_strategies.py
docs/: CLAUDE.md  README.md  WORKFLOW.md
scripts/: 01_tlag_detection_pwb.R  02_tlag_compare_pwbopt_strategies.R
scripts/visualization/: plot.py  plot_comparison_strategies.py
