[project]
name = "ms-fluxnet-ch4-n2o-timelag"
version = "0.1.0"
description = "Time lag detection and visualization for CH4 and N2O eddy covariance measurements using RFlux PWB method"
authors = [
    {name = "Lukas Hörtnagl", email = "31772692+holukas@users.noreply.github.com"}
]
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.7,<4.0",
    "pandas>=2.0,<3.0",
    "scipy>=1.10,<2.0",
    "numpy>=1.24,<3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "black>=23.0"
]

[tool.uv]
required-version = ">=0.4.0"

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    ".git",
    ".venv",
    "renv",
    "*.egg-info",
    ".pytest_cache"
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line too long (handled by formatter)
